compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_subject_pattern_unify_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 276
expression: "case 1 { 1.0 -> 1 }"
---
----- SOURCE CODE
case 1 { 1.0 -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:10
  │
1 │ case 1 { 1.0 -> 1 }
  │          ^^^

Expected type:

    Int

Found type:

    Float
